--- a/contacts.html
+++ b/contacts.html
@@ -109,7 +109,7 @@
 									<div class="contact-information__item-contact-info"><a class="contact-information__phone" href="tel:+74952231141">8 (495) 223-11-41</a><a class="contact-information__mail" href="mailto:msk@metaloteka.ru">msk@metaloteka.ru</a></div>
 								</div>
 							</div>
-							<div class="contact-information mb-50">
+							<div class="contact-information mb-30">
 								<div class="contact-information__wrapper">
 									<div class="contact-information__item-description">
 										<div class="contact-information__adress">г. Москва ул.Алексеевская, д.5А</div>
@@ -142,7 +142,7 @@
 									<div class="tabs__content" data-tab-content="3">Арматура А240/А-I – гладкая арматура, относится к классу А-I, представляет собой металлический профиль, для изготовления которого используется легированная сталь с пониженным количеством углерода. Это единственная разновидность арматуры, которая не имеет рифления. Арматура А240 трактуется так: А - обозначает горячекатаный прокат, 240 – указывает на предел текучести металла и составляет 240 Н/мм2. Производится такая арматура методом горячей прокатки с дополнительным низкотемпературным отпуском, и именно благодаря этому достигается красивая ровная гладкая поверхность. Готовая арматура должна быть ровной, гладкой, без трещин и пятен, с правильной геометрией, не должно быть сколов и ржавчины.</div>
 									<div class="tabs__content" data-tab-content="4">Арматура А240/А-I – гладкая арматура, относится к классу А-I, представляет собой металлический профиль, для изготовления которого используется легированная сталь с пониженным количеством углерода. Это единственная разновидность арматуры, которая не имеет рифления. Арматура А240 трактуется так: А - обозначает горячекатаный прокат, 240 – указывает на предел текучести металла и составляет 240 Н/мм2. Производится такая арматура методом горячей прокатки с дополнительным низкотемпературным отпуском, и именно благодаря этому достигается красивая ровная гладкая поверхность. Готовая арматура должна быть ровной, гладкой, без трещин и пятен, с правильной геометрией, не должно быть сколов и ржавчины. Арматура А240/А-I – гладкая арматура, относится к классу А-I, представляет собой металлический профиль, для изготовления которого используется легированная сталь с пониженным количеством углерода. Это единственная разновидность арматуры, которая не имеет рифления. Арматура А240 трактуется так: А - обозначает горячекатаный прокат, 240 – указывает на предел текучести металла и составляет 240 Н/мм2. Производится такая арматура методом горячей прокатки с дополнительным низкотемпературным отпуском, и именно благодаря этому достигается красивая ровная гладкая поверхность. Готовая арматура должна быть ровной, гладкой, без трещин и пятен, с правильной геометрией, не должно быть сколов и ржавчины.</div>
 								</div>
-							</div><button class="section-contact__button js-collapse">Развернуть</button>
+							</div>
 							<hr class="section-contact__line" />
 							<div class="section-contact__footer cg-35"><img class="section-contact__qr" src="/images/icon-qr.svg" />
 								<div class="contact-information-footer">
