--- a/order-processing.html
+++ b/order-processing.html
@@ -155,9 +155,11 @@
 									<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-29 section-order-reserve__info-way">Заполните данные для оформления заказа</p>
 									<div class="tabs tabs_button-dev">
 										<div class="tabs__buttons"><button class="tabs__button js-active" data-tab-button="1">Юрид. лицо</button><button class="tabs__button" data-tab-button="2">Физ. лицо</button></div>
+										<p class="section-order-reserve__text-checkout">Выберите юридическое лицо, если заказ будет оформляться на ИП или ООО</p>
 										<div class="tabs__body">
 											<div class="tabs__content js-active" data-tab-content="1">
-												<div class="section-order-reserve__ffff"><span class="text"></span>
+												<div class="section-order-reserve__ffff">
+													<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите юридическое лицо, если заказ будет оформляться на ИП или ООО</p>
 													<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input class="section-order-reserve__item-inn" required="required" /><span>ИНН*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input required="required" /><span>Название компании</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
 													<div class="section-order-reserve__item-btn">Сохранить</div>
 													<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</p>
@@ -165,7 +167,8 @@
 												</div>
 											</div>
 											<div class="tabs__content" data-tab-content="2">
-												<div class="section-order-reserve__ffff"><span class="text"></span>
+												<div class="section-order-reserve__ffff">
+													<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите физическое лицо, если заказ будет оформляться на частное лицо</p>
 													<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
 													<div class="section-order-reserve__item-btn">Сохранить</div>
 													<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</p>
