--- a/categories.html
+++ b/categories.html
@@ -268,6 +268,21 @@
 									<div class="product-main-details__range"></div>
 									<div class="product-main-details__information-block-details"><span class="product-main-details__aboveTitle">Алюминий</span><span class="product-main-details__subtitle">Алюминиевый круг</span>
 										<div class="product-main-details__wrapper-description"><span class="product-main-details__description">* Алюминиевый круг – вид плоского металлопроката, получаемый путем поперечной резки горячекатаных рулонов после их прокатки на полунепрерывных либо непрерывных станах.</span><span class="product-main-details__search-count">Найдено товаров (24)</span></div>
+										<div class="filter-group mb-25"><span class="filter-group__title">Диаметр (D) / мм</span>
+											<div class="filter-group__filters-wrapper">
+												<div class="filter-group__diameters">
+													<div class="filter-group__diameter-value" data-filter-diameters="1.5">1.5</div>
+													<div class="filter-group__diameter-value" data-filter-diameters="2">2</div>
+													<div class="filter-group__diameter-value" data-filter-diameters="4">4</div>
+													<div class="filter-group__diameter-value" data-filter-diameters="6">6</div>
+													<div class="filter-group__diameter-value active" data-filter-diameters="8">8</div>
+													<div class="filter-group__diameter-value" data-filter-diameters="10">10</div>
+													<div class="filter-group__diameter-value" data-filter-diameters="12">12</div>
+													<div class="filter-group__diameter-value" data-filter-diameters="16">16</div>
+													<div class="filter-group__diameter-value" data-filter-diameters="20">20</div>
+												</div>
+											</div>
+										</div>
 										<div class="filter-group"><span class="filter-group__title">Диаметр (D) / мм</span>
 											<div class="filter-group__filters-wrapper">
 												<div class="filter-group__diameters">
