--- a/popups.html
+++ b/popups.html
@@ -99,6 +99,10 @@
 						<li class="section-popup-list__item" data-popup-open="pay-check">Оплата (По счету) - popupPayCheck</li>
 						<li class="section-popup-list__item" data-popup-open="pay-thanks">Оплата (В офисе) - popupThanks</li>
 						<li class="section-popup-list__item" data-popup-open="authorization">Авторизация - authorization</li>
+						<li class="section-popup-list__item" data-popup-open="popup-registration">Регистрация - popupRegistration</li>
+						<li class="section-popup-list__item" data-popup-open="popup-authentication">Вход - popupAuthentication</li>
+						<li class="section-popup-list__item" data-popup-open="popup-password-recovery">Восстановление пароля - popupPasswordRecovery</li>
+						<li class="section-popup-list__item" data-popup-open="popup-send-password">Отправка пароля на почту - popupSendPassword</li>
 					</ul>
 				</div>
 			</section>
@@ -190,7 +194,7 @@
 				<hr class="popup-payment__line popup-payment__line_button" noshade="noshade" />
 				<div class="popup-payment__inform">
 					<h2 class="popup-payment__subtitle">Оплата резерва</h2>
-					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p><span class="popup-payment__scroll">Развернуть</span>
+					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
 				</div><button class="popup__close">Закрыть</button>
 			</div>
 		</div>
@@ -227,7 +231,7 @@
 				<hr class="popup-payment__line popup-payment__line_button" noshade="noshade" />
 				<div class="popup-payment__inform">
 					<h2 class="popup-payment__subtitle">Оплата резерва</h2>
-					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p><span class="popup-payment__scroll">Развернуть</span>
+					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
 				</div><button class="popup__close">Закрыть</button>
 			</div>
 		</div>
@@ -264,7 +268,7 @@
 				<hr class="popup-payment__line popup-payment__line_button" noshade="noshade" />
 				<div class="popup-payment__inform">
 					<h2 class="popup-payment__subtitle">Оплата заказа</h2>
-					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p><span class="popup-payment__scroll">Развернуть</span>
+					<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
 				</div><button class="popup__close">Закрыть</button>
 			</div>
 		</div>
@@ -314,6 +318,55 @@
 				<p class="text text_fs-32 text_wet-asphalt text_fw-bold popup-pay-check__inform-docs-thanks">Спасибо за заказ!</p>
 				<p class="text text_fs-20 text_light-slate-gray text_fw-bold popup-pay-check__email-thanks">ivanov.ivan@yandex.ru</p>
 				<p class="text text_fs-20 text_wet-asphalt popup-pay-check__text-inform-thanks">В ближайшее время с вами свяжется наш менеджер для уточнения деталей!</p><button class="popup__close">Закрыть</button>
+			</div>
+		</div>
+		<div class="popup" data-popup="popup-registration">
+			<div class="popup-registration popup__body">
+				<div class="popup-registration__title">Регистрация кабинета</div>
+				<div class="popup-registration__line"></div>
+				<div class="tabs tabs_button-dev">
+					<div class="tabs__buttons"><button class="tabs__button js-active" data-tab-button="1">Юр. лицо</button><button class="tabs__button" data-tab-button="2">Физ. лицо</button></div>
+					<div class="tabs__body">
+						<div class="tabs__content js-active" data-tab-content="1"><span class="text"></span>
+							<form class="popup-registration__form"><label class="popup-registration__field-item popup-registration__field-item_field-m"><input class="popup-registration__item-inn" required="required" /><span>ИНН*</span></label><label class="popup-registration__field-item popup-registration__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="popup-registration__field-item popup-registration__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="popup-registration__field-item popup-registration__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="popup-registration__field-item popup-registration__field-item_field-s"><input required="required" /><span>E-mail</span></label></form>
+						</div>
+						<div class="tabs__content" data-tab-content="2"><span class="text"></span>
+							<form class="popup-registration__form"><label class="popup-registration__field-item popup-registration__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="popup-registration__field-item popup-registration__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="popup-registration__field-item popup-registration__field-item_field-s"><input required="required" /><span>E-mail</span></label></form>
+						</div>
+					</div>
+				</div><button class="popup-registration__button-password">Зарегестрироваться</button>
+				<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 popup-registration__reserve-condition-title">Конфеденциальность личных данных</p>
+				<p class="text text_fs-14 text_wet-asphalt-70 text_fw-300 text_lh-1-14 popup-registration__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится.</p><button class="popup__close">Закрыть</button>
+			</div>
+		</div>
+		<div class="popup" data-popup="popup-authentication">
+			<div class="popup-authentication popup__body">
+				<div class="popup-authentication__title">Войти в кабинет</div>
+				<div class="popup-authentication__line"></div>
+				<form class="popup-authentication__form"><label class="popup-authentication__field-item popup-authentication__field-item_field-s"><input required="required" type="email" /><span>Логин / e-mail*</span></label><label class="popup-authentication__field-item popup-authentication__field-item_field-m"><input class="popup-authentication__item-inn" required="required" type="password" /><span>Пароль*</span></label></form>
+				<p class="text text_fs-12 text_wet-asphalt text_fw-bold text_lh-1-33 popup-authentication__reserve-condition-forgot-passwork">Забыли пароль?</p>
+				<p class="text text_fs-12 text_light-red text_fw-bold text_lh-1-33 popup-authentication__reserve-condition-validation">Заполните обязательное поле</p><button class="popup-authentication__button-password">Войти</button>
+				<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 popup-authentication__reserve-condition-title">Конфеденциальность личных данных</p>
+				<p class="text text_fs-14 text_wet-asphalt-70 text_fw-300 text_lh-1-14 popup-authentication__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится.</p><button class="popup__close">Закрыть</button>
+			</div>
+		</div>
+		<div class="popup" data-popup="popup-password-recovery">
+			<div class="popup-password-recovery popup__body">
+				<div class="popup-password-recovery__title">Восстановление пароля</div>
+				<div class="popup-password-recovery__line"></div>
+				<form class="popup-password-recovery__form"><label class="popup-password-recovery__field-item popup-password-recovery__field-item_field-s"><input required="required" type="email" /><span>Логин / e-mail*</span></label></form><button class="popup-password-recovery__button-password">Восстановить</button>
+				<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 popup-password-recovery__reserve-condition-title">Конфеденциальность личных данных</p>
+				<p class="text text_fs-14 text_wet-asphalt-70 text_fw-300 text_lh-1-14 popup-password-recovery__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится.</p><button class="popup__close">Закрыть</button>
+			</div>
+		</div>
+		<div class="popup" data-popup="popup-send-password">
+			<div class="popup-send-password popup__body">
+				<div class="popup-send-password__title">Восстановление пароля</div>
+				<div class="popup-send-password__line"></div>
+				<p class="text text_fs-32 text_wet-asphalt text_fw-bold text_lh-0-94 popup-send-password__reserve-condition-send-password">Новый пароль отправлен на ваш e-mail</p>
+				<p class="text text_fs-20 text_wet-asphalt text_fw-normal text_lh-1 popup-send-password__reserve-condition-email">ivanov.ivan@yandex.ru</p><button class="popup-send-password__button-password popup-send-password__button-password_none">Закрыть</button>
+				<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 popup-send-password__reserve-condition-title">Конфеденциальность личных данных</p>
+				<p class="text text_fs-14 text_wet-asphalt-70 text_fw-300 text_lh-1-14 popup-send-password__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится.</p><button class="popup__close">Закрыть</button>
 			</div>
 		</div>
 		<section class="section-catalog" data-type-section="general">
