fix search and tabs

--- a/order-reserve.html
+++ b/order-reserve.html
@@ -148,7 +148,7 @@
 												<div class="section-order-reserve__item-sum">15 000 /р.</div><button class="section-order-reserve__item-add">Добавить</button>
 											</div>
 										</div><button class="section-order-reserve__item-btn section-order-reserve__item-btn_none">Сохранить</button>
-										<div class="section-order-reserve__warning">
+										<div class="section-order-reserve__warning mb-40">
 											<div class="section-order-reserve__warning"><img class="section-order-reserve__warning-img" src="/images/icon-warning.svg" alt="Warning" />
 												<p class="text text_big text_wet-asphalt text_fw-300 text_lh-1 section-order-reserve__text-warning">Заранее согласовывайте время самовывоза с менеджером</p>
 											</div>
