--- a/order-processing.html
+++ b/order-processing.html
@@ -136,10 +136,44 @@
 											<div class="tabs__buttons"><button class="tabs__button js-active" data-tab-button="11">Самовывоз</button><button class="tabs__button" data-tab-button="12">Доставка</button></div>
 											<div class="tabs__body">
 												<div class="tabs__content" data-tab-content="12">
-													<form class="section-order-reserve__form-processing"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-acc"><input required="required" /><span>Адрес доставки</span><a class="section-order-reserve__carta">указать на карте</a></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input required="required" /><span>Контактное лицо</span></label></form>
+													<form class="section-order-reserve__form-processing mb-20"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-acc"><input required="required" /><span>Адрес доставки</span><a class="section-order-reserve__carta">указать на карте</a></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input required="required" /><span>Контактное лицо</span></label></form>
+													<div class="section-order-reserve__items mb-35">
+														<div class="section-order-reserve__item">
+															<div class="section-order-reserve__item-title">Газель 1.5т, 6м</div>
+															<div class="section-order-reserve__item-text">1 машина, максимальная грузоподьемность 1,5 тонны, максимальная длинна изделий до 6 метров</div>
+															<div class="section-order-reserve__item-sum">16 200 /р.</div><button class="section-order-reserve__item-add section-order-reserve__item-add_active">Выбрано</button>
+														</div>
+														<div class="section-order-reserve__item">
+															<div class="section-order-reserve__item-title">Борт 5т, 5м</div>
+															<div class="section-order-reserve__item-text">1 машина, максимальная грузоподьемность 1,5 тонны, максимальная длинна изделий до 6 метров</div>
+															<div class="section-order-reserve__item-sum">21 648 /р.</div><button class="section-order-reserve__item-add">Выбрать</button>
+														</div>
+														<div class="section-order-reserve__item">
+															<div class="section-order-reserve__item-title">Длинномер 10т, 10м</div>
+															<div class="section-order-reserve__item-text">1 машина, максимальная грузоподьемность 1,5 тонны, максимальная длинна изделий до 10 метров</div>
+															<div class="section-order-reserve__item-sum">32 400 /р.</div><button class="section-order-reserve__item-add">Выбрать</button>
+														</div>
+														<div class="section-order-reserve__item">
+															<div class="section-order-reserve__item-title">Длинномер 20т, 10м</div>
+															<div class="section-order-reserve__item-text">1 машина, максимальная грузоподьемность 1,5 тонны, максимальная длинна изделий до 10 метров</div>
+															<div class="section-order-reserve__item-sum">32 400 /р.</div><button class="section-order-reserve__item-add">Выбрать</button>
+														</div>
+													</div>
+													<div class="section-order-reserve__item-btn">Добавить в заказ</div>
+													<div class="section-order-reserve__warning mb-40">
+														<div class="section-order-reserve__warning"><img class="section-order-reserve__warning-img" src="/images/icon-warning.svg" alt="Warning" />
+															<p class="text text_big text_wet-asphalt text_fw-300 text_lh-1 section-order-reserve__text-warning">Заранее согласовывайте время самовывоза с менеджером</p>
+														</div>
+														<div class="section-order-reserve__warning"><img class="section-order-reserve__warning-img" src="/images/icon-warning.svg" alt="Warning" />
+															<p class="text text_big text_wet-asphalt text_fw-300 text_lh-1 section-order-reserve__text-warning">Самовывоз осуществляется собственными силами</p>
+														</div>
+														<div class="section-order-reserve__warning"><img class="section-order-reserve__warning-img" src="/images/icon-warning.svg" alt="Warning" />
+															<p class="text text_big text_wet-asphalt text_fw-300 text_lh-1 section-order-reserve__text-warning">На манипуляторы с «Катюшей» погрузка не осуществляется</p>
+														</div>
+													</div>
 												</div>
 												<div class="tabs__content js-active" data-tab-content="11">
-													<form class="section-order-reserve__form-processing"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-acc"><input required="required" /><span>Адрес склада</span></label></form>
+													<form class="section-order-reserve__form-processing mb-40"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-acc"><input required="required" /><span>Адрес склада</span></label></form>
 												</div>
 											</div>
 										</div>
@@ -158,26 +192,21 @@
 										<p class="section-order-reserve__text-checkout">Выберите юридическое лицо, если заказ будет оформляться на ИП или ООО</p>
 										<div class="tabs__body">
 											<div class="tabs__content js-active" data-tab-content="1">
-												<div class="section-order-reserve__ffff">
-													<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите юридическое лицо, если заказ будет оформляться на ИП или ООО</p>
-													<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input class="section-order-reserve__item-inn" required="required" /><span>ИНН*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input required="required" /><span>Название компании</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
-													<div class="section-order-reserve__item-btn">Сохранить</div>
-													<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</p>
-													<p class="text text_fs-10 text_wet-asphalt-70 text_fw-300 text_lh-1-4 section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
-												</div>
+												<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите юридическое лицо, если заказ будет оформляться на ИП или ООО</p>
+												<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input class="section-order-reserve__item-inn" required="required" /><span>ИНН*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-m"><input required="required" /><span>Название компании</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
+												<div class="section-order-reserve__item-btn">Сохранить</div>
+												<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</p>
+												<p class="text text_fs-10 text_wet-asphalt-70 text_fw-300 text_lh-1-4 section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
 											</div>
 											<div class="tabs__content" data-tab-content="2">
-												<div class="section-order-reserve__ffff">
-													<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите физическое лицо, если заказ будет оформляться на частное лицо</p>
-													<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
-													<div class="section-order-reserve__item-btn">Сохранить</div>
-													<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</p>
-													<p class="text text_fs-10 text_wet-asphalt-70 text_fw-300 text_lh-1-4 section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
-												</div>
+												<p class="text text_wet-asphalt-80 text_fw-300 text_lh-1-14 section-order-reserve__text-data-registration">Выберите физическое лицо, если заказ будет оформляться на частное лицо</p>
+												<form class="section-order-reserve__form"><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Имя*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Фамилия*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>Моб. телефон*</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-x"><input required="required" /><span>Адрес доставки</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-s"><input required="required" /><span>E-mail</span></label><label class="section-order-reserve__field-item section-order-reserve__field-item_field-t"><textarea required="required"></textarea><span>Комментарий к заказу</span></label></form>
+												<div class="section-order-reserve__item-btn">Сохранить</div>
+												<p class="text text_fs-18 text_wet-asphalt text_fw-800 text_lh-1-1 section-order-reserve__reserve-condition-title">Конфеденциальность личных данных</p>
+												<p class="text text_fs-10 text_wet-asphalt-70 text_fw-300 text_lh-1-4 section-order-reserve__reserve-condition-text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p>
 											</div>
 										</div>
 									</div>
-									<div class="section-order-reserve__ffff"></div>
 								</div>
 							</div>
 							<div class="section-order-reserve__line-small"></div>
